--- a/guide.ipynb
+++ b/guide.ipynb
@@ -518,7 +518,10 @@
     "\n",
     "comparison['Original'] = df['Municípios'].values\n",
     "\n",
-    "for metric in ['jaro_winkler_similarity', 'damerau_levenshtein_distance', 'hamming_distance']: # All metrics available in the library\n",
+    "# All metrics available in the library\n",
+    "metrics = ['jaro_winkler_similarity', 'damerau_levenshtein_distance', 'hamming_distance']\n",
+    "\n",
+    "for metric in metrics: \n",
     "    comparison[f'With reference-{metric}'] = st.treat_referenced(df['Municípios'].values, ref_cities, metric = metric)\n",
     "    comparison[f'Without reference-{metric}'] = st.treat_unreferenced(df['Municípios'].values, metric = metric)\n",
     "    \n",
