--- a/guide.ipynb
+++ b/guide.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
        "4  João Pessoa - PB"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -165,19 +165,19 @@
        "4  João Pessoa (PB)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from string_treatment import string_treatment as st\n",
+    "from string_treatment import treat_referenced\n",
     "\n",
     "df_corrected_with_ref = df.copy()\n",
     "\n",
     "# Use the 'reference list' previously created to correct the uncorrected list\n",
-    "df_corrected_with_ref['Municípios'] = st.treat_referenced(df_corrected_with_ref['Municípios'], \n",
-    "                                                          ref_cities)\n",
+    "df_corrected_with_ref['Municípios'] = treat_referenced(df_corrected_with_ref['Municípios'], \n",
+    "                                                       ref_cities)\n",
     "df_corrected_with_ref.head()"
    ]
   },
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
        "4  João Pessoa - PB"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,15 +267,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from string_treatment import string_treatment as st\n",
+    "from string_treatment import treat_unreferenced\n",
     "\n",
     "df_corrected_without_ref = df.copy()\n",
     "\n",
-    "df_corrected_without_ref['Municípios'] = st.treat_unreferenced(df_corrected_without_ref['Municípios'].values)"
+    "df_corrected_without_ref['Municípios'] = treat_unreferenced(df_corrected_without_ref['Municípios'].values)"
    ]
   },
   {
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -438,81 +438,29 @@
        "</div>"
       ],
       "text/plain": [
-       "                    Original With reference-jaro_winkler_similarity   \n",
-       "0             João Pessoa/PB                       João Pessoa (PB)  \\\n",
-       "1             João Pessoa PB                       João Pessoa (PB)   \n",
-       "2             Fortaleza - CE                         Fortaleza (CE)   \n",
-       "3             Fortaleza - CE                         Fortaleza (CE)   \n",
-       "4           João Pessoa - PB                       João Pessoa (PB)   \n",
-       "...                      ...                                    ...   \n",
-       "1295  São Caetano do Sul, SP                São Caetano do Sul (SP)   \n",
-       "1296           Valinhos , SP                          Valinhos (SP)   \n",
-       "1297           Pedreira (SP)                          Pedreira (SP)   \n",
-       "1298           São Paulo, SP                         São Paulo (SP)   \n",
-       "1299        Porto Alegre, RS                      Porto Alegre (RS)   \n",
-       "\n",
-       "     Without reference-jaro_winkler_similarity   \n",
-       "0                               João Pessoa/PB  \\\n",
-       "1                               João Pessoa/PB   \n",
-       "2                               Fortaleza - CE   \n",
-       "3                               Fortaleza - CE   \n",
-       "4                               João Pessoa/PB   \n",
-       "...                                        ...   \n",
-       "1295                            São Paulo - SP   \n",
-       "1296                             Valinhos , SP   \n",
-       "1297                             Pedreira (SP)   \n",
-       "1298                            São Paulo - SP   \n",
-       "1299                          Porto Alegre, RS   \n",
-       "\n",
-       "     With reference-damerau_levenshtein_distance   \n",
-       "0                               João Pessoa (PB)  \\\n",
-       "1                               João Pessoa (PB)   \n",
-       "2                                 Fortaleza (CE)   \n",
-       "3                                 Fortaleza (CE)   \n",
-       "4                               João Pessoa (PB)   \n",
-       "...                                          ...   \n",
-       "1295                     São Caetano do Sul (SP)   \n",
-       "1296                               Valinhos (SP)   \n",
-       "1297                               Pedreira (SP)   \n",
-       "1298                              São Paulo (SP)   \n",
-       "1299                           Porto Alegre (RS)   \n",
-       "\n",
-       "     Without reference-damerau_levenshtein_distance   \n",
-       "0                                    João Pessoa/PB  \\\n",
-       "1                                    João Pessoa/PB   \n",
-       "2                                    Fortaleza - CE   \n",
-       "3                                    Fortaleza - CE   \n",
-       "4                                    João Pessoa/PB   \n",
-       "...                                             ...   \n",
-       "1295                         São Caetano do Sul, SP   \n",
-       "1296                                  Valinhos , SP   \n",
-       "1297                                   Limeira (SP)   \n",
-       "1298                                 São Paulo - SP   \n",
-       "1299                               Porto Alegre, RS   \n",
-       "\n",
-       "     With reference-hamming_distance Without reference-hamming_distance  \n",
-       "0                   João Pessoa (PB)                     João Pessoa/PB  \n",
-       "1                   João Pessoa (PB)                     João Pessoa/PB  \n",
-       "2                     Fortaleza (CE)                     Fortaleza - CE  \n",
-       "3                     Fortaleza (CE)                     Fortaleza - CE  \n",
-       "4                   João Pessoa (PB)                     João Pessoa/PB  \n",
-       "...                              ...                                ...  \n",
-       "1295         São Caetano do Sul (SP)             São Caetano do Sul, SP  \n",
-       "1296                   Valinhos (SP)                      Valinhos , SP  \n",
-       "1297                   Pedreira (SP)                      Pedreira (SP)  \n",
-       "1298                  São Paulo (SP)                     São Paulo - SP  \n",
-       "1299               Porto Alegre (RS)                   Porto Alegre, RS  \n",
+       "                    Original  ... Without reference-hamming_distance\n",
+       "0             João Pessoa/PB  ...                     João Pessoa/PB\n",
+       "1             João Pessoa PB  ...                     João Pessoa/PB\n",
+       "2             Fortaleza - CE  ...                     Fortaleza - CE\n",
+       "3             Fortaleza - CE  ...                     Fortaleza - CE\n",
+       "4           João Pessoa - PB  ...                     João Pessoa/PB\n",
+       "...                      ...  ...                                ...\n",
+       "1295  São Caetano do Sul, SP  ...             São Caetano do Sul, SP\n",
+       "1296           Valinhos , SP  ...                      Valinhos , SP\n",
+       "1297           Pedreira (SP)  ...                      Pedreira (SP)\n",
+       "1298           São Paulo, SP  ...                     São Paulo - SP\n",
+       "1299        Porto Alegre, RS  ...                   Porto Alegre, RS\n",
        "\n",
        "[1300 rows x 7 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from string_treatment import string_treatment as st\n",
+    "from string_treatment import treat_referenced, treat_unreferenced\n",
     "\n",
     "comparison = dict()\n",
     "\n",
@@ -522,8 +470,8 @@
     "metrics = ['jaro_winkler_similarity', 'damerau_levenshtein_distance', 'hamming_distance']\n",
     "\n",
     "for metric in metrics: \n",
-    "    comparison[f'With reference-{metric}'] = st.treat_referenced(df['Municípios'].values, ref_cities, metric = metric)\n",
-    "    comparison[f'Without reference-{metric}'] = st.treat_unreferenced(df['Municípios'].values, metric = metric)\n",
+    "    comparison[f'With reference-{metric}'] = treat_referenced(df['Municípios'].values, ref_cities, metric = metric)\n",
+    "    comparison[f'Without reference-{metric}'] = treat_unreferenced(df['Municípios'].values, metric = metric)\n",
     "    \n",
     "pd.DataFrame(comparison)"
    ]
